Fix classes and top bar spacing

--- a/themes/lithium/src/sass/lithium/_content.scss
+++ b/themes/lithium/src/sass/lithium/_content.scss
@@ -5,6 +5,10 @@
 
   &.with-breadcrumb {
     padding-top: pxToRem(20);
+
+    @include media-breakpoint-down(sm){
+      padding-top: 0;
+    }
   }
 
   /*
