--- a/themes/lithium/src/sass/lithium/_topbar.scss
+++ b/themes/lithium/src/sass/lithium/_topbar.scss
@@ -2,7 +2,7 @@
   top: 20px;
   left: calc(#{$lithium-sidebar-collapsed-width} + #{pxToRem(40)});
   right: 40px;
-  height: 78px;
+  height: pxToRem(64);
   background-color: $lithium-header-bg-color;
   border-radius: 10px;
   margin-bottom: 0;
